--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -152,7 +152,8 @@ a:focus { color: #0099cc;
 .welcome_title{ color: #666666; font-size: 20px; margin: 20px 0 10px 0;}
 .need_help{}
 .need_help a{ color: #ff5600; font-size: 14px;}
-.sign_mybtn{background: #009ddc; font-size: 14px; padding: 8px 50px; color: #fff;}
+.sign_mybtn{width: 150px; background: #009ddc; font-size: 14px; padding: 8px 50px; color: #fff;}
+.sign_mybtn:focus {outline: none;}
 .in_block{display: inline-block; vertical-align: top;}
 .fname_in{width: 46%; }
 .link_clr{color: #009ddc;}
