add job site and job detail view issue fixed

--- a/src/app/add-job-site/add-job-site.html
+++ b/src/app/add-job-site/add-job-site.html
@@ -1,6 +1,6 @@
 <div class="row job-header-row">
 	<div class="col-md-12 job-site-header">
-		<h4 style="margin: 0;">Add New Job Site Address<a class="close-cross pull-right" ng-click="$dismiss()"><i class="fa fa-times-circle-o" style="color: #ffffff;"></i></a></h4>
+		<h4>Add New Job Site Address<a class="close-cross pull-right" ng-click="$dismiss()"><i class="fa fa-times-circle-o" style="color: #666666;"></i></a></h4>
 	</div>
 </div>
 <div class="row fields-row">
@@ -33,7 +33,7 @@
 </div>
 <div class="row" style="margin: 0;">
 	<div class="col-md-12 site-col">
-		<button class="btn job-btn">Add Job Site</button>
-		<button class="btn job-btn">Cancel</button>
+		<button class="btn btn-primary">Add Job Site</button>
+		<button class="btn btn-default">Cancel</button>
 	</div>
 </div>
