--- a/src/app/job-site-detail/job-site-detail.html
+++ b/src/app/job-site-detail/job-site-detail.html
@@ -1,6 +1,6 @@
 <div class="row job-header-row">
 	<div class="col-md-12 job-site-header">
-		<h4 style="margin: 0;">Job Site Details<a class="close-cross pull-right" ng-click="$dismiss()"><i class="fa fa-times-circle-o" style="color: #ffffff;"></i></a></h4>
+		<h4>Job Site Details<a class="close-cross pull-right" ng-click="$dismiss()"><i class="fa fa-times-circle-o" style="color: #666666;"></i></a></h4>
 	</div>
 </div>
 <div class="row" style="margin: 0;">
@@ -25,7 +25,7 @@
 		<p>+1 234 567 890</p>
 	</div>
 </div>
-<hr>
+<hr style="margin-bottom: 0;">
 <div class="row" style="margin: 0;">
 	<div class="col-md-12 site-col">
 		<button class="btn job-btn" ng-click="$dismiss()">Close</button>
