--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -835,33 +835,30 @@ a:focus { color: #0099cc;
 }
 
 .job-site-header {
-  padding: 10px 20px 10px;
-  background-color: #666666;
-  color: #fff;
+  padding: 10px 20px 8px;
+  border-bottom: 1px solid #eee;
+  margin-bottom: 10px;
+}
+
+.job-site-header h4 {
+  font-size: 20px;
+  font-weight: 600;
 }
 
 .fields-row {
   margin: 0;
 }
 
-.fields-row .form-control {
-  border-radius: 0 !important;
-}
-
 .site-col {
   padding: 10px 20px 10px 20px;
 }
 
-.fields-row .other-col {
-  padding: 0px 20px 10px 20px;
+.site-col button:first-child {
+  margin-right: 10px;
 }
 
-.job-btn {
-  background: none;
-  border: 1px solid #000;
-  border-radius: 0;
-  color: #000;
-  margin-right: 10px;
+.fields-row .other-col {
+  padding: 0px 20px 10px 20px;
 }
 
 .detail-col {
