Portal access changes

--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -64,7 +64,7 @@
               <div class="panel-body">
                 Something Went Wrong :(
                 <p>
-                  <a href="/#/register">Click here to continue on register page</a>
+                  <a ng-click="$state.go('hmPrelogin.register',{},{ reload : true })">Click here to continue on register page</a>
                 </p>
               </div>
             </div>
