--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -20,13 +20,13 @@ a:focus { color: #0099cc;
   background-attachment: scroll;
   background-image: url(/assets/images/main-bg.jpg);
   background-position: center top;
-  background-repeat: none;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
   background-repeat: no-repeat;
   background-size: 100% auto;
+  height: 520px;
 }
 .lift-bg{background: #f5f5f5; padding: 20PX 0;}
 .nopadding{padding: 0 !important;}
@@ -100,7 +100,7 @@ a:focus { color: #0099cc;
   margin: 0 0 0 15px;
   color: #009ddc;
 }
-.search_main{text-align: center; padding: 20px 0 330px 0;}
+.search_main{text-align: center; padding: 20px 0 0 0;}
 
 .my_search{background: #ff5600; margin-right: 25px; color: #fff; margin-left: -7px;  padding: 9px 12px;
   border-radius: 0px 5px 5px 0px;
