--- a/src/app/invoices/invoices.html
+++ b/src/app/invoices/invoices.html
@@ -6,13 +6,13 @@
         Invoices
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right nopadding my-bottm-line dash_board_tit">
-        <input type="text" placeholder="Search Invoices" class="form-control pull-right mng-search-bar">
+        <input type="text" placeholder="Search Invoices" ng-model="query" ng-change="fetchInvoices()" class="form-control pull-right mng-search-bar">
         <!-- <span class="dash_board_light">Home</span>/ <span class="dash_board_bold">Dashboard</span> -->
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 manage-job-btn-col" style="padding-bottom: 20px;">
-        <button class="btn btn-default pull-right manage-job-btn deactivate list">Outstanding</button>
-        <button class="btn pull-right manage-job-btn map">All Invoices</button>
+        <button class="btn btn-default pull-right manage-job-btn deactivate list" ng-click="toggleInvoiceView()">Outstanding</button>
+        <button class="btn pull-right manage-job-btn map" ng-click="toggleInvoiceView()">All Invoices</button>
       </div>
   </div>
     <!-- <section class="content-header">
@@ -37,7 +37,7 @@
       </div>
     </section> -->
     <br>
-    <table class="table table-striped">
+    <table class="table table-striped" ng-if="invoices.length">
       <thead>
       <tr>
         <th>Invoices</th>
@@ -51,12 +51,12 @@
       </thead>
       <tbody>
       <tr ng-repeat="invoice in invoices">
-        <td class="invoice-no">{{invoice.no}}</td>
-        <td>{{invoice.jobsite}}</td>
-        <td>{{invoice.contract}}</td>
-        <td>{{invoice.purchaseOrder}}</td>
-        <td>{{invoice.total}}</td>
-        <td>{{invoice.dueAmount}}</td>
+        <td class="invoice-no">{{invoice.InvoiceID}}</td>
+        <td>{{invoice.Site_Name}}</td>
+        <td>{{invoice.Source}}</td>
+        <td>{{invoice.Purchase_Order_ID}}</td>
+        <td>{{invoice.Total}}</td>
+        <td>{{invoice.Balance}}</td>
         <td>
           <a href="#"><i class="fa fa-eye"></i></a>
           <a href="#"><i class="fa fa-download"></i></a></td>
