--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -25,8 +25,8 @@ a:focus { color: #0099cc;
   background-size: cover;
   -o-background-size: cover;
   background-repeat: no-repeat;
-  background-size: 100% auto;
-  height: 520px;
+  background-size: 100% 100%;
+  height: auto;
 }
 .lift-bg{background: #f5f5f5; padding: 20PX 0;}
 .nopadding{padding: 0 !important;}
@@ -97,10 +97,10 @@ a:focus { color: #0099cc;
 .get_soft{
   border: solid 1px #009ddc;
   background: #ffffff; padding: 6px 20px;
-  margin: 0 0 0 15px;
+  margin: 0 15px 0 15px;
   color: #009ddc;
 }
-.search_main{text-align: center; padding: 20px 0 0 0;}
+.search_main{text-align: center; padding: 20px 0 240px 0;}
 
 .my_search{background: #ff5600; margin-right: 25px; color: #fff; margin-left: -7px;  padding: 9px 12px;
   border-radius: 0px 5px 5px 0px;
@@ -109,7 +109,7 @@ a:focus { color: #0099cc;
 }
 .glyphicon-align-justify{font-size: 18px;}
 .glyphicon-earphone{font-size: 18px;}
-.glyphicon-log-in{font-size: 18px;}
+.glyphicon-log-in{font-size: 18px; margin-left: 15px;}
 .eqe_main{margin: 30px 0 0 0; font-weight: 600; padding: 0;}
 .eqe_tex{ line-height: 20px;  font-size: 14px;
   margin: 0 0 0 9px;}
@@ -891,4 +891,21 @@ a:focus { color: #0099cc;
 
 .landing-header .icon-bar {
   background-color: #ffffff;
+}
+
+.prof-drop {
+  padding-top: 10px;
+}
+
+.notify {
+  float: right;
+  margin-right: 10%;
+}
+
+.right-nav {
+  float: none !important;
+}
+
+.filt-btn {
+  display: none;
 }
