--- a/src/app/add-job-site/add-job-site.html
+++ b/src/app/add-job-site/add-job-site.html
@@ -4,23 +4,21 @@
 	</div>
 </div>
 <div class="row fields-row">
+  <!--<input type="text" id="Autocomplete" ngModel="result1" class="form-control" />-->
 	<div class="col-md-12 site-col">
 		<input type="text" placeholder="Job Site Name" class="form-control">
 	</div>
-	<div class="col-md-6 other-col">
-		<input type="text" placeholder="Address Line 1" class="form-control">
+	<div class="col-md-12 other-col">
+    <input type="text" placeholder="City" class="form-control" ng-model="address.route">
 	</div>
 	<div class="col-md-6 other-col">
-		<input type="text" placeholder="Address Line 2" class="form-control">
+		<input type="text" placeholder="City" class="form-control" ng-model="address.locality">
 	</div>
 	<div class="col-md-6 other-col">
-		<input type="text" placeholder="City" class="form-control">
+		<input type="text" placeholder="State" class="form-control" ng-model="address.administrative_area_level_1">
 	</div>
 	<div class="col-md-6 other-col">
-		<input type="text" placeholder="State" class="form-control">
-	</div>
-	<div class="col-md-6 other-col">
-		<input type="text" placeholder="Zip Code" class="form-control">
+		<input type="text" placeholder="Zip Code" class="form-control" ng-model="address.postal_code">
 	</div>
 	<div class="col-md-6 other-col">
 		<input type="text" placeholder="Phone" class="form-control">
@@ -28,7 +26,36 @@
 </div>
 <div class="row">
 	<div class="col-md-12">
-		<ui-gmap-google-map center='map.center' zoom='map.zoom'></ui-gmap-google-map>
+
+    <ui-gmap-google-map
+      center="map.center"
+      zoom="map.zoom"
+      dragging="map.dragging"
+      bounds="map.bounds"
+      events="map.events"
+      options="map.options"
+      pan="true"
+      control="map.control"
+      >
+      <!--to add as a map control -->
+      <ui-gmap-search-box options="searchbox.options" template="searchbox .html"
+                          events="searchbox.events" position="searchbox.position"></ui-gmap-search-box>
+
+      <!--to add to a parent div-->
+      <!--<ui-gmap-search-box options="searchbox.options" template="searchbox.template" events="searchbox.events" parentdiv="searchbox.parentdiv"></ui-gmap-search-box>-->
+
+
+      <ui-gmap-markers idkey="map.idkey" models="map.markers" coords="'self'" icon="'icon'"
+                       click="'onClicked'"></ui-gmap-markers>
+      <ui-gmap-window coords="selected" idkey="selected.place_id" templateurl="selected.templateurl"
+                      templateparameter="selected.templateparameter" options="selected.options"
+                      closeClick='selected.closeClick()' ng-cloak>
+
+      </ui-gmap-window>
+
+
+    </ui-gmap-google-map>
+
 	</div>
 </div>
 <div class="row" style="margin: 0;">
