--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -86,8 +86,7 @@
               <div class="col-lg-12">
                 <form role="form" name="loginForm" novalidate valdr-type="User">
                   <div class="form-group" valdr-form-group>
-                    <input type="hidden" id="credentials" name="credentials" ng-model="credentials" />
-
+                    <input type="hidden" id="credentials" name="credentials" ng-model="loginData.credentials" />
                   </div>
                   <div class="form-group" valdr-form-group>
                     <input type="email" autocomplete="off" class="form-control" ng-model="loginData.email" name="email"
@@ -117,6 +116,9 @@
 
               <div class="col-lg-12">
                 <form  role="form" name="userRegisterForm"  novalidate valdr-type="UserRegister" class="register-user">
+                  <div class="form-group" valdr-form-group>
+                    <input type="hidden" id="alreadyExists" name="alreadyExists" ng-model="UserRegisterData.alreadyExists" />
+                  </div>
                   <div class="form-group flex-field">
                     <fieldset valdr-form-group>
                       <input type="text" class="form-control in-block fname_in" ng-model="UserRegisterData.firstName" name="firstName"
@@ -131,7 +133,7 @@
 
                     <input type="email" autocomplete="off" class="form-control" ng-model="UserRegisterData.email" name="email" placeholder="Email">
                   </div>
-                  <div class="form-group" valdr-form;[-group>
+                  <div class="form-group" valdr-form-group>
 
                     <input type="password" class="form-control" ng-model="UserRegisterData.password" name="password"
                            placeholder="password" autocomplete="off">
