--- a/src/app/terms-and-conditions/terms-and-conditions.html
+++ b/src/app/terms-and-conditions/terms-and-conditions.html
@@ -11,6 +11,7 @@
 	  	</p>
   </div>
   <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="$dismiss()">Close</button>
+    <button class="btn" ng-click="$dismiss()">Cancel</button>
+    <button class="btn btn-primary" ng-click="$dismiss()">I accept</button>
   </div>
 </div>
