dashboard pages responsive

--- a/src/app/dashboard-main/dashboard-main.html
+++ b/src/app/dashboard-main/dashboard-main.html
@@ -1,16 +1,16 @@
-<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12 display_side nopadding">
+<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12 display_side nopadding dashboard-small">
   <div class="tab-content">
     <!-- START  Dashboard Content -->
     <div id="dash" class="tab-pane fade in active">
 
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 nopadding my-bottm-line manage_job_tit">
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 nopadding my-bottm-line manage_job_tit manage_job_tit_small">
         Manage Job Sites
       </div>
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right nopadding my-bottm-line dash_board_tit">
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right nopadding my-bottm-line dash_board_tit manage_job_tit_small">
         <span class="dash_board_light">Home</span>/ <span class="dash_board_bold">Dashboard</span>
       </div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 job-ste-box">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 job-ste-box job-ste-box-small">
         <ul>
           <li>
             <div class="">
@@ -65,7 +65,7 @@
           </li>
         </ul>
       </div>
-      <div class="col -lg-6 col-md-6 col-sm-12 col-xs-12  upcoming">
+      <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12  upcoming">
         <h4 class="upcoming-title">Upcoming Reservations
           <i class="fa fa-angle-right  fa-2x flot-right upcom-arrow"></i></h4>
         <div class="upcome_eqe">
@@ -78,7 +78,7 @@
               <div class="in-block update_date_title">
                 <p class="eqe_tex">Equipment Name</p>
                 <p class="eqe_tex">Job Site Location</p>
-                <p class="reser_tex">Reserved 8 days ago</p>
+                <p class="reser_tex reser_tex_small">Reserved 8 days ago</p>
 
 
               </div>
@@ -94,7 +94,7 @@
               <div class="in-block update_date_title">
                 <p class="eqe_tex">Equipment Name</p>
                 <p class="eqe_tex">Job Site Location</p>
-                <p class="reser_tex">Reserved 8 days ago</p>
+                <p class="reser_tex reser_tex_small">Reserved 8 days ago</p>
 
 
               </div>
@@ -110,7 +110,7 @@
               <div class="in-block update_date_title">
                 <p class="eqe_tex">Equipment Name</p>
                 <p class="eqe_tex">Job Site Location</p>
-                <p class="reser_tex">Reserved 8 days ago</p>
+                <p class="reser_tex reser_tex_small">Reserved 8 days ago</p>
 
 
               </div>
@@ -126,7 +126,7 @@
               <div class="in-block update_date_title">
                 <p class="eqe_tex">Equipment Name</p>
                 <p class="eqe_tex">Job Site Location</p>
-                <p class="reser_tex">Reserved 8 days ago</p>
+                <p class="reser_tex reser_tex_small">Reserved 8 days ago</p>
 
 
               </div>
@@ -137,7 +137,7 @@
           </ul>
         </div>
       </div>
-      <div class="col -lg-6 col-md-6 col-sm-12 col-xs-12  upcoming">
+      <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12  upcoming">
         <h4 class="upcoming-title">Equipment nearing Rental eriod End
           <i class="fa fa-angle-right  fa-2x flot-right upcom-arrow"></i></h4>
         <div class="upcome_eqe">
@@ -152,8 +152,8 @@
                 <p class="eqe_tex">Job Site Location</p>
                 <p class="last_day"><a href="#">Last 4 days to submit</a></p>
                 <p class="view_contact">
-                  <span class="text-left"><a href="#">Extend Now</a></span>
-                  <span class=" flot-right"><a href="#">View Contract</a></span>
+                  <span class="text-left extend_link"><a href="#">Extend Now</a></span>
+                  <span class=" flot-right view_contract_link"><a href="#">View Contract</a></span>
                 </p>
 
 
@@ -172,8 +172,8 @@
                 <p class="eqe_tex">Job Site Location</p>
                 <p class="last_day"><a href="#">Last 4 days to submit</a></p>
                 <p class="view_contact">
-                  <span class="text-left"><a href="#">Extend Now</a></span>
-                  <span class=" flot-right"><a href="#">View Contract</a></span>
+                  <span class="text-left extend_link"><a href="#">Extend Now</a></span>
+                  <span class=" flot-right view_contract_link"><a href="#">View Contract</a></span>
                 </p>
 
 
@@ -192,8 +192,8 @@
                 <p class="eqe_tex">Job Site Location</p>
                 <p class="last_day"><a href="#">Last 4 days to submit</a></p>
                 <p class="view_contact">
-                  <span class="text-left"><a href="#">Extend Now</a></span>
-                  <span class=" flot-right"><a href="#">View Contract</a></span>
+                  <span class="text-left extend_link"><a href="#">Extend Now</a></span>
+                  <span class=" flot-right view_contract_link"><a href="#">View Contract</a></span>
                 </p>
 
 
@@ -212,8 +212,8 @@
                 <p class="eqe_tex">Job Site Location</p>
                 <p class="last_day"><a href="#">Last 4 days to submit</a></p>
                 <p class="view_contact">
-                  <span class="text-left"><a href="#">Extend Now</a></span>
-                  <span class=" flot-right"><a href="#">View Contract</a></span>
+                  <span class="text-left extend_link"><a href="#">Extend Now</a></span>
+                  <span class=" flot-right view_contract_link"><a href="#">View Contract</a></span>
                 </p>
 
 
