--- a/src/app/styles/media.css
+++ b/src/app/styles/media.css
@@ -209,6 +209,51 @@
     font-size: 16px;
   }
 
+  .dashboard-small {
+    padding: 0 15px 0 15px !important;    
+  }
+
+  .manage_job_tit_small {
+    font-size: 16px;
+  }
+
+  .job-ste-box-small ul li{
+    width: 100%;
+    margin-left: 0;
+    margin-bottom: 15px;
+    max-width: 290px;
+    float: none;
+  }
+
+  .job-ste-box-small ul li:first-child {
+    margin: 0 0 15px 0;
+  }
+
+  .update_date_number {
+    font-size: 40px;
+  }
+
+  .update_date_month {
+    font-size: 14px;
+  }
+
+  .update_date_title {
+    width: 45%;
+  }
+
+  .reser_tex_small {
+    font-size: 13px;
+    padding: 0;
+  }
+
+  .extend_link {
+    display: block;
+  }
+
+  .view_contract_link {
+    float: none;
+  }
+
 }
 
 @media screen and (max-width: 480px) {
