--- a/src/app/manage-jobsites/manage-jobsites.html
+++ b/src/app/manage-jobsites/manage-jobsites.html
@@ -4,7 +4,10 @@
     <div class="container">
       <div class="row">
         <!-- START  Dashboard tab -->
-        <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 filter_side">
+        <div class="col-sm-12 col-xs-12 filt-btn">
+          <button class="btn btn-default" ng-click="filterBtn()">Manage Job Sites</button>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 filter_side show-for-small" ng-class="{'show-filter': showFilter}">
           <ul class="nav nav-pills nav-stacked my-verti-tab">
             <li>
               <a data-toggle="pill" href="/#/dashboard">
@@ -40,23 +43,23 @@
 
         </div>
         <!-- End  Dashboard tab -->
-        <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12 display_side nopadding">
+        <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12 display_side nopadding dashboard-small">
           <div class="tab-content">
             <!-- START  Dashboard Content -->
             <div id="dash" class="tab-pane fade in active">
 
-              <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 nopadding my-bottm-line manage_job_tit">
+              <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 nopadding my-bottm-line manage_job_tit">
                 Manage Job Sites
               </div>
-              <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right nopadding my-bottm-line dash_board_tit">
+              <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-right nopadding my-bottm-line dash_board_tit">
                 <input type="text" placeholder="Search Sites" class="form-control pull-right mng-search-bar">
                 <!-- <span class="dash_board_light">Home</span>/ <span class="dash_board_bold">Dashboard</span> -->
               </div>
-              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot bord_dash_bot_small"></div>
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 manage-job-btn-col">
-                <a href="#/add-job" class="btn pull-left manage-job-btn">Add Job Site</a>
-                <button class="btn btn-default pull-right manage-job-btn deactivate list">List View</button>
-                <button class="btn pull-right manage-job-btn map">Map View</button>
+                <a href="#/add-job" class="btn pull-left manage-job-btn add-job-site-btn">Add Job Site</a>
+                <button class="btn btn-default pull-right manage-job-btn deactivate list list-view-btn">List View</button>
+                <button class="btn pull-right manage-job-btn map map-view-btn">Map View</button>
               </div>
               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 job-ste-box">
                 <ui-gmap-google-map center='map.center' zoom='map.zoom'></ui-gmap-google-map>
