other links of dashboard page responsive

--- a/src/app/quota-n-reservations/quota-n-reservations.html
+++ b/src/app/quota-n-reservations/quota-n-reservations.html
@@ -3,7 +3,7 @@
     <!-- START  Dashboard Content -->
     <div id="dash" class="tab-pane fade in active">
 
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 nopadding my-bottm-line manage_job_tit">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 my-bottm-line manage_job_tit">
         Quota and Reservations
       </div>
     </div>
