--- a/src/app/invoices/invoices.html
+++ b/src/app/invoices/invoices.html
@@ -1,15 +1,15 @@
-<div class="col-md-9">
+<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
   <div class="content-wrapper1">
     <div id="dash" class="tab-pane fade in active">
 
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 nopadding my-bottm-line manage_job_tit">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 nopadding my-bottm-line manage_job_tit">
         Invoices
       </div>
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right nopadding my-bottm-line dash_board_tit">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-right nopadding my-bottm-line dash_board_tit">
         <input type="text" placeholder="Search Invoices" ng-model="query" ng-change="fetchInvoices()" class="form-control pull-right mng-search-bar">
         <!-- <span class="dash_board_light">Home</span>/ <span class="dash_board_bold">Dashboard</span> -->
       </div>
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot"></div>
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot bord_dash_bot_small"></div>
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 manage-job-btn-col" style="padding-bottom: 20px;">
         <button class="btn btn-default pull-right manage-job-btn deactivate list" ng-click="toggleInvoiceView()">Outstanding</button>
         <button class="btn pull-right manage-job-btn map" ng-click="toggleInvoiceView()">All Invoices</button>
