help page and job site detail page responsive

--- a/src/app/job-site-detail/job-site-detail.html
+++ b/src/app/job-site-detail/job-site-detail.html
@@ -6,22 +6,50 @@
 <div class="row" style="margin: 0;">
 	<div class="col-md-6 detail-col">
 		<h4>Site Number</h4>
-		<h4>Site</h4>
-		<h4>Address Line</h4>
-		<h4>Address Line 2</h4>
-		<h4>City</h4>
-		<h4>Zip Code</h4>
-		<h4>Country</h4>
-		<h4>Phone</h4>
 	</div>
 	<div class="col-md-6 detail-col" style="border: none;">
 		<p>123 - 453</p>
+	</div>
+	<div class="col-md-6 detail-col">
+		<h4>Site</h4>
+	</div>
+	<div class="col-md-6 detail-col" style="border: none;">
 		<p>506 Hopkins Road, Houston</p>
+	</div>
+	<div class="col-md-6 detail-col">
+		<h4>Address Line</h4>
+	</div>
+	<div class="col-md-6 detail-col" style="border: none;">
 		<p>Address Line</p>
+	</div>
+	<div class="col-md-6 detail-col">
+		<h4>Address Line 2</h4>
+	</div>
+	<div class="col-md-6 detail-col" style="border: none;">
 		<p>Address Line 2 goes</p>
+	</div>
+	<div class="col-md-6 detail-col">
+		<h4>City</h4>
+	</div>
+	<div class="col-md-6 detail-col" style="border: none;">
 		<p>Washington DC</p>
+	</div>
+	<div class="col-md-6 detail-col">
+		<h4>Zip Code</h4>
+	</div>
+	<div class="col-md-6 detail-col" style="border: none;">
 		<p>23308</p>
+	</div>
+	<div class="col-md-6 detail-col">
+		<h4>Country</h4>
+	</div>
+	<div class="col-md-6 detail-col" style="border: none;">
 		<p>USA</p>
+	</div>
+	<div class="col-md-6 detail-col">
+		<h4>Phone</h4>
+	</div>	
+	<div class="col-md-6 detail-col" style="border: none;">
 		<p>+1 234 567 890</p>
 	</div>
 </div>
