--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -249,21 +249,21 @@
                 </div>
                 <div class="row no-search-row" ng-if="!results.length">
                   <div class="col-md-12 text-col">
-                    <p style="text-align: center;">Sorry, no result found for "{{query}}". Let us help you out. Tell us what do need? We will get back to you.</p>
+                    <p style="text-align: center; margin-top: 10px;">Sorry, no result found for "{{query}}". Let us help you out. Tell us what do need? We will get back to you.</p>
                   </div>
                   <div class="col-md-12 col1">
                       <p>Let us help you out</p>
                   </div>
                   <div class="col-md-12 col2">
                     <p>What do you need?</p>
-                    <input type="text" placeholder="Type of equipment, service, parts, etc." class="form-control" style="height: 38px;">
+                    <input type="text" placeholder="Type of equipment, service, parts, etc." class="form-control" style="height: 38px; margin-bottom: 10px;">
                   </div>
                   <div class="col-md-12 col2">
                     <p>When do you need it?</p>
                   </div>
                   <div class="col-md-6 col2 col3" style="padding-top:0;">
-                    <div class="form-control form-left" style="height: 38px;">
-                      <p class="pull-left">To</p>
+                    <div class="form-control form-left" style="height: 38px; margin-bottom: 10px;">
+                      <p class="pull-left to">To</p>
                       <input type="text" placeholder="dd/mm/yy">
                       <img src="assets/images/calendar.png" class="pull-right">
                     </div>
